[project]
name = "ai-voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "edge-tts>=7.2.8",
    "gtts>=2.5.4",
    "langchain-ollama>=1.1.0",
    "playsound3>=3.3.1",
    "pyaudio>=0.2.14",
    "pygame>=2.6.1",
    "pyttsx3>=2.99",
    "speechrecognition>=3.16.1",
    "streamlit>=1.58.0",
]
