[project]
name = "ai-voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "edge-tts>=7.2.8",
    "faiss-cpu>=1.14.2",
    "gtts>=2.5.4",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.4",
    "playsound3>=3.3.1",
    "pyaudio>=0.2.14",
    "pygame>=2.6.1",
    "pypdf>=6.13.2",
    "pyttsx3>=2.99",
    "speechrecognition>=3.16.1",
    "streamlit>=1.58.0",
]
